# Planner

./: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
migrations/: 001_initial.sql  002_fts.sql
scripts/: seed.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Clients/: ClientList.tsx
src/components/Common/: Drawer.tsx  Settings.tsx
src/components/Dashboard/: ConsultantHome.tsx
src/components/Knowledge/: KnowledgeRepository.tsx
src/components/Layout/: Layout.tsx
src/components/Notes/: NoteList.tsx  NotesList.tsx
src/components/Opportunities/: OpportunityPipeline.tsx
src/components/Projects/: ProjectList.tsx
src/components/RAID/: RAIDLog.tsx
src/components/Tasks/: TaskList.tsx
src/components/Time/: TimeTracker.tsx
src/lib/: dayjs-config.ts  db.ts  store.ts
src/styles/: globals.css
