[package]
name = "planner"
version = "1.0.0"
description = "A local-first desktop planner for productivity"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-rc", features = [
  "tray-icon"
] }
tauri-plugin-sql = { version = "2.0.0-rc", features = ["sqlite"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.0-rc"
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
